# phishing

./: Dockerfile  README.MD  app.py  compose.yaml  init_db.py  pyproject.toml
modules/: downloader.py  sqlite_dao.py
tests/: conftest.py  test_sqlite_dao.py
